Code Cleanup exception handling improved